--- a/Daily Stand Up 🧍‍♂️/2024-10-11.md
+++ b/Daily Stand Up 🧍‍♂️/2024-10-11.md
@@ -2,4 +2,14 @@
 	* Is relevancy
 		* Ensure in total take home pay✔
 		* In employee payroll report detail✔
-		* In paysli
+		* In payslip creation
+		* finalization
+			* components
+			* total take homepay ✔️
+* [ ] Payslip Defect related
+	* Payslip belum sesuai dengan template
+	* Name of payslip not mapped in payslip
+	* Payroll component with config Show on Payslip NO still appear in payslip
+	* Can't download payslip in SWA
+	* Send to receipt is null in disbursement detail
+	* Payroll report name didn't map in disbursement detail if create disbursement with multiple payroll
